<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_style">

    <TableLayout
        android:id="@+id/table"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintWidth_percent="1">

        <TableRow tools:ignore="UselessParent"
            android:background="@drawable/dev_row">

            <TextView
                android:id="@+id/adCl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/addKl"
                android:textColor="#fff"
                android:textSize="18sp" />
        </TableRow>

        <TableRow tools:ignore="UselessParent">
            <TextView
                android:id="@+id/addClient"
                android:maxLines="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textColor="#000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow tools:ignore="UselessParent"
            android:background="@drawable/dev_row">
            <TextView
                android:id="@+id/conNum"
                android:text="@string/contLk"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow tools:ignore="UselessParent">
            <TextView
                android:id="@+id/nameClient"
                android:textColor="#000"
                android:textSize="18sp"
                android:padding="4dp"
                android:maxLines="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow tools:ignore="UselessParent"
            android:background="@drawable/dev_row">
            <TextView
                android:id="@+id/contNum"
                android:text="@string/contNum"
                android:textColor="#fff"
                android:textSize="18sp"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow tools:ignore="UselessParent">
            <TextView
                android:textColor="#0000FF"
                android:id="@+id/numClient"
                android:textSize="18sp"
                android:padding="4dp"
                android:maxLines="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

<!--        <TableRow tools:ignore="UselessParent"
            android:background="@drawable/dev_row">
            <TextView
                android:id="@+id/menNum"
                android:text="@string/contMNum"
                android:textColor="#fff"
                android:textSize="18sp"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow tools:ignore="UselessParent">
            <TextView
                android:id="@+id/infManager"
                android:textColor="#0000FF"
                android:textSize="18sp"
                android:padding="4dp"
                android:maxLines="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>-->

        <TableRow tools:ignore="UselessParent"
            android:background="@drawable/dev_row">
            <TextView
                android:id="@+id/noteHat"
                android:text="@string/notesCl"
                android:textColor="#fff"
                android:textSize="18sp"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow tools:ignore="UselessParent">
            <TextView
                android:id="@+id/note"
                android:textColor="#0000FF"
                android:textSize="18sp"
                android:padding="4dp"
                android:maxLines="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tex"
        android:text="@string/notation"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table"
        app:layout_constraintWidth_percent="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>