<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ListViewImp">

    <TextView
        android:id="@+id/information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/getInfo"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

   <!-- <androidx.fragment.app.FragmentContainerView
        android:id="@+id/frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:name="com.consta7.driversapp.view.ConfirmDialog"
        tools:layout="@layout/fragment_alert_dialog" />-->

    <ScrollView
        android:id="@+id/scrollTab"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/btnPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.90"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>


    <LinearLayout
        android:id="@+id/btnPanel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/dev_btn"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintWidth_percent="1">

        <Button
            android:id="@+id/btnMapReadOnly"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#023e8a"
            android:text="@string/goToMapReadOnly"
            android:textColor="#FFF"
            android:textSize="16sp"
            android:layout_weight="1"/>

        <View
            android:id="@+id/view"
            android:background="#FFF"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0" />

        <Button
            android:id="@+id/btnMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#0a902d"
            android:padding="12dp"
            android:text="@string/goToMap"
            android:textColor="#FFF"
            android:textSize="16sp"
            tools:ignore="ButtonStyle,TextContrastCheck" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="#023e8a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/information"
        app:layout_constraintWidth_percent="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>